--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "description": "Deployable, Secure, Intelligent, Database-driven AI Copy Generator",
     "main": "backend/server.js",
     "scripts": {
-        "start": "node backend/server.js"
+  "start": "node index.js"
+}
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
