--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "description": "Deployable, Secure, Intelligent, Database-driven AI Copy Generator",
     "main": "backend/server.js",
     "scripts": {
-  "start": "node index.js"
+  "start": "node server.js"
 }
     },
     "dependencies": {
