--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
     "description": "Deployable, Secure, Intelligent, Database-driven AI Copy Generator",
     "main": "backend/server.js",
     "scripts": {
-  "start": "node server.js"
-}
+        "start": "node backend/server.js"
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
